Closed
Bug 501092
Opened 16 years ago
Closed 16 years ago
NS_ASSERTION(parentDoc, "No parent document during initialization!");
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: surkov, Assigned: surkov)
References
(Blocks 1 open bug)
Details
(Keywords: access)
Attachments
(1 file)
|
1.11 KB,
patch
|
davidb
:
review+
|
Details | Diff | Splinter Review |
We get this assertion whenever nsDocAccessible::SetRoleMapEntry is called on root document. Assertion was introduced in bug 461921, i.e. I replaced existing warning on this assertion. Originally warning was introduced in bug 419416. Like Neil said this assertion looks excess.
| Assignee | ||
Comment 1•16 years ago
|
||
| Assignee | ||
Updated•16 years ago
|
Attachment #385714 -
Flags: review? → review?(bolterbugz)
Comment 2•16 years ago
|
||
Comment on attachment 385714 [details] [diff] [review]
patch
r=me
Attachment #385714 -
Flags: review?(bolterbugz) → review+
| Assignee | ||
Comment 3•16 years ago
|
||
landed on mozilla 1.9.2 - http://hg.mozilla.org/mozilla-central/rev/f63f28455fdf
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•