Bug 501092 - NS_ASSERTION(parentDoc, No parent document during initialization), r=davidb